@@ -103,15 +103,16 @@
 <!-- ------------------------- -->
 
 <br>
-<h4>最新版</h4>
-<p>Suika2とは完全互換を維持したままです。</p>
+<h4>ダウンロード</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.0 (2024/5/2):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.0.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.0.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.1 (2024/5/3):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.1.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.1.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
-<a href="/dl/polaris-engine.apk">Android版 Polaris Engine</a><br>
-iOS版 Polaris Engine (ストア公開の調整中)<br>
+<br>
+モバイル版 (編集/プレビューのみ):<br>
+<a href="https://apps.apple.com/jp/app/polaris-engine/id6496852993">iOS版 Polaris Engine [App Store]</a> (iCloud Driveが必要)<br>
+<a href="/dl/polaris-engine.apk">Android版 Polaris Engine [非ストア版]</a> (起動時にスマホ本体のDocumentsフォルダを選択する必要あり)<br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
 </p>
@@ -371,6 +372,7 @@ iOS版 Polaris Engine (ストア公開の調整中)<br>
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.1 2024/5/3 <ul> <li>game-nosign.exeを追加</li> </ul> </li>
 <li>Polaris Engine 1.2.0 2024/5/2 <ul> <li>Unity対応の最初のアルファ版</li> </ul> </li>
 <li>Polaris Engine 1.1.24 2024/5/1 <ul> <li>libpngのバージョンアップ(Windows番のAndroid Studioでのビルドに対応)</li> </ul> </li>
 <li>Polaris Engine 1.1.23 2024/5/1 <ul> <li>Android版の修正</li> </ul> </li>
