@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.0 (2024/5/2):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.0.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.0.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.1 (2024/5/3):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.1.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.1.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.1 2024/5/３ <ul> <li>Added game-nosign.exe</li> </ul> </li>
 <li>Polaris Engine 1.2.0 2024/5/2 <ul> <li>The first public alpha version of Unity support</li> </ul> </li>
 <li>Polaris Engine 1.1.24 2024/5/1 <ul> <li>Updated libpng from 1.6.35 to 1.6.43 (for cmake on Android NDK)</li> </ul> </li>
 <li>Polaris Engine 1.1.23 2024/5/1 <ul> <li>Fixed the Android export</li> </ul> </li>
