@@ -151,7 +151,7 @@
   <li>Windowsアプリ (オプションでインストーラも自動作成可能)</li>
   <li>Macアプリ</li>
   <li>Webブラウザアプリ</li>
-  <li>家庭用ゲーム機ソフト (Unityを利用, Unreal Engineにも対応の予定)</li>
+  <li>家庭用ゲーム機ソフト (Unityを利用)</li>
 </ul>
 
 <!-- ------------------------- -->
@@ -164,7 +164,7 @@
   <li>商業のゲームクリエイタを目指している方</li>
   <li>ご自分のスマホやタブレットで動作させてみたい方 (ストア審査なし)</li>
   <li>App Store / Google Playストア / Steam などにデビューしてみたい方 (ストア審査あり)</li>
-  <li>WindowsだけでなくMac, iPhone, iPad, Android, Chromebook, Linux, Webでもゲーム開発してみたい方</li>
+  <li>WindowsだけでなくMac, iPhone, iPad, Android, Chromebook, Linuxでもゲーム開発してみたい方</li>
 </ul>
 
 <!-- ------------------------- -->
@@ -172,33 +172,33 @@
 <h2 class="spacer">アプリラインナップ</h2>
 <div class="row align-items-md-center spacer">
 	<div class="col-md">
-		<h2>Polaris Engine (Windows, Mac, Linux)</h2>
+		<h2>デスクトップ版 Polaris Engine (Windows, Mac, Linux)</h2>
 		<p>
-			Polaris Engineの開発環境は無料で利用でき、PC, Mac, Linuxに対応しています。<br>
+			Polaris Engineの開発環境は無料で利用でき、Windows, Mac, Linuxに対応しています。<br>
 			ベースの小説を書いた上で、右クリックして演出を追加すればゲームを作ることができます。<br>
 			さらに、１行ずつ実行できるデバッグ機能や、変数の変化を確認する機能もあります。<br>
-			ゲームのエクスポート機能がついており、ワンクリックでiPhone, Android, Windows, macOS, Web向けのゲームを出力可能です。<br>
+			ゲームのエクスポート機能がついており、ワンクリックでiPhone, Android, Windows, macOS, Web, 家庭用ゲーム機のゲームを出力可能です。<br>
 			Polaris EngineのVLS (Visual Live Scripting) 技術は、GUI編集の便利さとスクリプト記述の効率性の間でバランスを取った、2001年からのソフトウェア工学上の研究成果です。
 		</p>
 	</div>
 </div>
 <div class="row align-items-md-center spacer">
 	<div class="col-md">
-		<h2>Polaris Engine Mobile (iPhone, iPad, Android, Chromebook)</h2>
+		<h2>モバイル版 Polaris Engine (iPhone, iPad, Android, Chromebook)</h2>
 		<p>
-			Polaris Engine Mobileアプリを利用すれば、Polaris Engineの一部機能を外出先でもご利用いただけます。<br>
-			iCloud Driveなどのクラウドストレージを使い、イラスト制作ソフトやテキストエディタと組み合わせてご利用いただけます。<br>
+			Polaris Engineのモバイル版を利用すれば、編集とプレビューについて外出先でもご利用いただけます。<br>
+			iCloud Driveなどのクラウドストレージを使い、イラスト制作ソフトやテキストエディタと組み合わせてご利用ください。<br>
 			あなたのお気に入りのデバイスで、どこにいてもクリエイティブに。
 		</p>
 	</div>
 </div>
 <div class="row align-items-md-center spacer">
 	<div class="col-md">
-		<h2>Polaris Engine Web (Chromeブラウザ)</h2>
+		<h2>ブラウザ版 Polaris Engine</h2>
 		<p>
 			Google Chromeブラウザがあれば、デスクトップ版のPolaris Engineと同等の機能が利用できるほか、
-			かつてKiraraにあった視覚的な編集機能も利用可能です。<br>
-			<a href="/vls/">開発途中のバージョンはこちら</a> (フォルダの入れ子に対応していません)
+			かつてSuika2 Kiraraにあった視覚的な編集機能も利用可能です。<br>
+			<!-- <a href="/vls/">開発途中のバージョンはこちら</a> (フォルダの入れ子に対応していません) -->
 		</p>
 	</div>
 </div>
@@ -209,7 +209,7 @@
 			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Windows版ゲームになります。
 		</p>
 		<p>
-			Microsoft Store, Xbox, Steamでの有償/無償の公開が可能であり、公開作業を代行してくださる方を紹介しております。
+			Microsoft StoreやSteamでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
@@ -218,11 +218,11 @@
 		<h2>iOS版ゲーム</h2>
 		<p>
 			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Appleから提供されているXcodeでビルドできます。<br>
-			ご自身のiPhone, iPad, Vision Proに転送するだけでしたら、Mac本体とApple Developer Programアカウントさえあれば審査は不要で、作業は10分もかかりません。<br>
+			ご自身のiPhone, iPadに転送するだけでしたら、Mac本体とApple Developer Programアカウントさえあれば審査は不要で、作業は10分もかかりません。<br>
 			iOS向けに配信を行うことで、iPhoneとiPadだけでなく、2020年以降のモデルのMacや、Apple Vision Proにも配信できます。
 		</p>
 		<p>
-			App Storeでの有償/無償の公開が可能であり、公開作業を代行してくださる方を紹介しております。
+			App Storeでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
@@ -232,10 +232,10 @@
 		<p>
 			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Googleから提供されているAndroid Studioでビルドできます。<br>
 			ご自身のAndroidスマホに転送するだけでしたら、登録や審査は不要で、作業には10分もかかりません。<br>
-			Playストアで配信したAndroidアプリは、Chromebookにも配信されます。近いうちに、Android TVにも配信の予定です。
+			Playストアで配信したAndroidアプリは、Chromebookにも配信されます。Android TVにも配信できます。
 		</p>
 		<p>
-			Google Playでの有償/無償の公開が可能であり、公開作業を代行してくださる方を紹介しております。
+			Google Playでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
@@ -259,6 +259,17 @@
 		スマホなどでマウスの右クリックがなくてもタッチだけで使えるように、右上のシステムメニューをはじめとするUIを整備してあります。
 	</p>
 </div>
+<div class="row align-items-md-center spacer">
+	<div class="col-md">
+		<h2>Mac版ゲーム</h2>
+		<p>
+			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Appleから提供されているXcodeでビルドできます。<br>
+		</p>
+		<p>
+			Mac App Storeでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+		</p>
+	</div>
+</div>
 
 <!-- ------------------------- -->
 
@@ -278,7 +289,7 @@
   <li>2001年12月 マウス操作のアドベンチャーゲーム制作ツールの先駆けである <a href="https://www.vector.co.jp/soft/win95/game/se225307.html">「西瓜Studio」</a> として誕生 (<a href="https://github.com/ktabata/suika-studio-2003-gpl">GitHub 2003年版</a>)</li>
   <li>2003年03月 Ver.0.47.7で開発停止 (そのときのファイルは <a href="http://download.seesaa.jp/contents/win/ent/rgame/08101/">ここ</a> に残っています)</li>
   <li>2016年06月 エディタを廃止して "Suika2" として生まれ変わり、マルチプラットフォーム対応となる(が、活動中断)</li>
-  <li>2022年06月 活動再開してデバッグツールが "Suika2 Pro" として復活し、Discordサーバーを開設</li>
+  <li>2022年06月 活動再開、デバッグツールが "Suika2 Pro" として復活、Discordサーバーを開設</li>
   <li>2022年08月 GUI機能の導入によりゲームエンジン部分が完成</li>
   <li>2023年01月 ビジュアルエディタ Suika2 Kirara の試作 (のちに廃止)</li>
   <li>2023年05月 <a href="/award2023.html">Suika2ノベルゲーム大賞2023</a>を開催、9月末閉幕、10月末結果公表</li>
@@ -287,8 +298,8 @@
 	<li>2023年12月 App Store, Mac App Store, Google Play Store, Microsoft Store, Ubuntu PPA で開発ツールを公開</li>
   <li>2024年01月 <a href="/award2024.html">Suika2ノベルアプリ大賞2024</a>を開催</li>
   <li>2024年03月 軽量で高品質なエフェクトの拡充、プロ仕様ソフトとして他エンジンの置き換えを開始</li>
-  <li>2024年04月 Unity版の追加</li>
   <li>2024年04月 Polaris Engineへの移行</li>
+  <li>2024年05月 Unityエクスポートの追加で家庭用ゲーム機に対応</li>
 </ul>
 
 <!-- ------------------------- -->
@@ -306,7 +317,7 @@
 <p>
 	有志によるDiscordユーザーコミュニティーがあります。初心者でも気軽に質問できます。<br>
 	<a class="btn btn-primary mb-3" href="https://discord.gg/Xh9mFwr4E8">ユーザーコミュニティーに参加</a><br>
-	コア開発者チームも参加しておりますので、気軽にご要望などを言っていただけますとうれしいです。
+	コア開発チームも参加しておりますので、気軽にご要望などを言っていただけますとうれしいです。
 </p>
 <p>
 	SNSでは、<a href="https://twitter.com/">X</a>	で Polaris Engine のキーワードを入れてポストしていただくことで、見つけ次第リプライしています。<br>
@@ -334,7 +345,7 @@
 <h2 class="spacer">連絡先</h2>
 <p>コア開発チームへの連絡は下記へお願いいたします。</p>
 <ul class="alert alert-info">
-	<li>コア開発者ML core&#64;polaris-engine.com</li>
+	<li>コア開発者メーリングリスト core&#64;polaris-engine.com</li>
 </ul>
 
 <!-- ------------------------- -->
@@ -344,7 +355,7 @@
 	<li>ミッション
 		<ol>
 			<li>簡素: 誰でも簡単にノベルアプリを制作できます</li>
-			<li>高速: 私たちは最も高速なネイティブ技術しか使いません</li>
+			<li>高速: 私たちは最も高速なネイティブ技術だけを用います</li>
 			<li>開示: 私たちは他者の知的財産を尊重しながら、自分たちの技術はすべて公開します</li>
 		</ol>
 	</li>
